# k8s-playground

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  deploy.sh  rest-server-deployment.yaml
config/: config.ini
registry/: config.yml
src/: server.cpp
